--- a/public/CSS/welcome.css
+++ b/public/CSS/welcome.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton&family=Caveat:wght@400;500;600;700&family=Dancing+Script:wght@400;500;600;700&family=Kaushan+Script&family=Pacifico&family=Poppins:wght@500;600;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Caveat:wght@400;500;600;700&family=Dancing+Script:wght@400;500;600;700&family=Josefin+Sans:wght@400;500;600;700&family=Kaushan+Script&family=Pacifico&family=Poppins:wght@500;600;700;900&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -49,4 +49,26 @@ body{
 .picture{
     height: 400px;
     width: 90%;
+}
+.menu-title{
+    font-weight: bolder;
+    font-size: 70px;
+    color: #441d0b;
+    font-family: 'Kaushan Script', cursive;
+    animation: backInLeft;
+    animation-duration: 8s;
+}
+.citation{
+    font-size: 20px;
+    font-weight: 600;
+}
+.menu-item{
+    width: 90%;
+    height: 60px;
+    background-color: #414143;
+    color:white;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: 'Josefin Sans', sans-serif;
 }
