ajout du controller et model & tables base données

--- a/public/CSS/welcome.css
+++ b/public/CSS/welcome.css
@@ -113,3 +113,7 @@ body{
     color: rgb(16, 199, 16);
     transform: scale(1.5);
 }
+.row {
+    background-color: white;
+    border-radius: 30px;
+}
